fix(ui): bg on list page, checkbox alignment

--- a/app/components/fun.css
+++ b/app/components/fun.css
@@ -7,7 +7,7 @@ body {
     background-image: url('/mountain.jpg');
     background-size: cover;
     background-position: center;
-    opacity: 0.2;
+    opacity: 0.6;
     position: absolute;
     top: 0;
     left: 0;
